@@ -25,6 +25,7 @@ import java.lang.management.ManagementFactory;
 import java.net.URISyntaxException;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.List;
 
@@ -35,11 +36,8 @@ import org.kohsuke.args4j.CmdLineParser;
 import org.kohsuke.args4j.Option;
 import org.kohsuke.args4j.ParserProperties;
 
-public class RunReproductionCommands {
-  private static final Logger LOG = LogManager.getLogger(RunReproductionCommands.class);
-
-  private static final String JAVA_PREFIX = "java -cp";
-  private static final String JVM_ARGS = "-Xms512M -Xmx192G -Dslf4j.internal.verbosity=WARN --add-modules jdk.incubator.vector";
+public class RunJavaReproductionCommands {
+  private static final Logger LOG = LogManager.getLogger(RunJavaReproductionCommands.class);
 
   public static class Args {
     @Option(name = "--config", metaVar = "[config]", required = true, usage = "Config file with regression commands.")
@@ -53,6 +51,15 @@ public class RunReproductionCommands {
 
     @Option(name = "--max", metaVar = "[num]", usage = "Maximum number of concurrent jobs (defaults to 4).")
     public int max = 4;
+
+    @Option(name = "--logs-directory", metaVar = "[path]", usage = "Directory for command logs (default: logs).")
+    public String logsDirectory = ReproductionUtils.Constants.DEFAULT_LOGS_DIRECTORY;
+
+    @Option(name = "--runs-directory", metaVar = "[path]", usage = "Directory for runs (default: runs).")
+    public String runsDirectory = ReproductionUtils.Constants.DEFAULT_RUNS_DIRECTORY;
+
+    @Option(name = "--dry-run", metaVar = "[boolean]", usage = "Print commands without executing them.")
+    public boolean dryRun = false;
   }
 
   public static void main(String[] argv) throws Exception {
@@ -70,11 +77,26 @@ public class RunReproductionCommands {
       throw new IllegalArgumentException("--sleep must be non-negative.");
     }
 
-    List<String> commands = loadCommands(args.config);
+    List<String> commands = loadCommands(args.config, args.logsDirectory, args.runsDirectory);
     LOG.info("Running commands in {}", args.config);
+    LOG.info("Logs directory: {}", args.logsDirectory);
+    LOG.info("Runs directory: {}", args.runsDirectory);
     LOG.info("Sleep interval: {}", args.sleep);
     LOG.info("Threshold load: {}", args.load);
-    LOG.info("Max concurrent jobs: {}", args.max > 0 ? args.max : "unlimited");
+    LOG.info("Max concurrent jobs: {}", args.max);
+    LOG.info("Dry run: {}", args.dryRun);
+
+    if (args.dryRun) {
+      for (String command : commands) {
+        LOG.info("Command: {}", command);
+      }
+      return;
+    }
+
+    Path logsDir = Paths.get(args.logsDirectory);
+    if (!Files.exists(logsDir)) {
+      Files.createDirectories(logsDir);
+    }
 
     List<Process> active = new ArrayList<>();
     int nextCommand = 0;
@@ -85,7 +107,8 @@ public class RunReproductionCommands {
       double currentLoad = ManagementFactory.getOperatingSystemMXBean().getSystemLoadAverage();
       boolean loadAvailable = currentLoad >= 0;
       boolean canLaunchByMax = active.size() < args.max;
-      boolean canLaunchByLoad = !loadAvailable || currentLoad < args.load;
+      // Always allow launching when there are no active jobs, otherwise high load can deadlock progress.
+      boolean canLaunchByLoad = !loadAvailable || currentLoad < args.load || active.isEmpty();
 
       if (nextCommand < commands.size() && canLaunchByMax && canLaunchByLoad) {
         String command = commands.get(nextCommand);
@@ -105,34 +128,29 @@ public class RunReproductionCommands {
     LOG.info("All jobs completed!");
   }
 
-  private static List<String> loadCommands(String path) throws IOException, URISyntaxException {
+  private static List<String> loadCommands(String resource, String logsDirectory, String runsDirectory) throws IOException, URISyntaxException {
     List<String> commands = new ArrayList<>();
-    Path localPath = Path.of(path);
-    if (Files.exists(localPath)) {
-      for (String line : Files.readAllLines(localPath)) {
-        String command = line.trim();
-        if (command.isEmpty() || command.startsWith("#")) {
-          continue;
-        }
-        commands.add(command);
-      }
-      return commands;
-    }
 
     InputStream commandStream = null;
     IllegalArgumentException lastException = null;
-    String[] resourceCandidates = new String[] {
-        path,
-        "reproduce/from-corpus/commands/" + path,
-        "reproduce/from-prebuilt-indexes/commands/" + path
-    };
 
-    for (String resourcePath : resourceCandidates) {
-      try {
-        commandStream = ReproductionUtils.loadResourceStream(resourcePath, RunReproductionCommands.class);
-        break;
-      } catch (IllegalArgumentException e) {
-        lastException = e;
+    Path localPath = Path.of(resource);
+    if (Files.exists(localPath)) {
+      commandStream = Files.newInputStream(localPath);
+    } else {
+      String[] resourceCandidates = new String[] {
+          resource,
+          "reproduce/from-corpus/commands/" + resource + ".txt",
+          "reproduce/from-prebuilt-indexes/commands/" + resource + ".txt"
+      };
+
+      for (String resourcePath : resourceCandidates) {
+        try {
+          commandStream = ReproductionUtils.loadResourceStream(resourcePath, RunJavaReproductionCommands.class);
+          break;
+        } catch (IllegalArgumentException e) {
+          lastException = e;
+        }
       }
     }
 
@@ -140,7 +158,11 @@ public class RunReproductionCommands {
       throw lastException;
     }
 
-    String fatjarPath = new File(RunReproductionCommands.class.getProtectionDomain().getCodeSource().getLocation().toURI()).getPath();
+    if (commandStream == null) {
+      throw new IllegalArgumentException("Could not load command resource: " + resource);
+    }
+
+    String fatjarPath = new File(RunJavaReproductionCommands.class.getProtectionDomain().getCodeSource().getLocation().toURI()).getPath();
 
     try (InputStream in = commandStream;
          BufferedReader reader = new BufferedReader(new InputStreamReader(in))) {
@@ -150,9 +172,26 @@ public class RunReproductionCommands {
         if (command.isEmpty() || command.startsWith("#")) {
           continue;
         }
-        commands.add(String.format("%s %s %s %s", JAVA_PREFIX, fatjarPath, JVM_ARGS, command));
+
+        String configName = null;
+        String[] commandParts = command.split("\\s+");
+        for (int i = 0; i < commandParts.length - 1; i++) {
+          if ("--config".equals(commandParts[i])) {
+            configName = commandParts[i + 1];
+            break;
+          }
+        }
+
+        boolean fromPrebuilt = resource.contains("prebuilt");
+        if (fromPrebuilt && !command.contains("--runs-directory")) {
+          command = String.format("%s --runs-directory %s", command, runsDirectory);
+        }
+
+        String logFile = Paths.get(logsDirectory, String.format("log.%s.%s.txt", fromPrebuilt ? "from-prebuilt-indexes" : "from-corpus", configName)).toString();
+        commands.add(String.format("%s %s %s %s > %s 2>&1", ReproductionUtils.Constants.JAVA_PREFIX, fatjarPath, ReproductionUtils.Constants.JVM_ARGS, command, logFile));
       }
     }
+
     return commands;
   }
 
